syntax = "proto3";

package grpc.cache;

service CacheService {
    rpc GetInfo (CacheRequest) returns (CacheResponse);
    rpc SetInfo (CacheRequest) returns (CacheResponse);
}


message RetCodeResponse{
    int32 Errorcode = 1;
    string message = 2;
}

message CacheRequest {
      string  key = 1 ;
      int32   value = 2;
}

message CacheResponse {
    int32 value = 1;
    RetCodeResponse retcode = 2;
}



